Expose ngrok Web Inspection Interface on localhost:8040

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -50,6 +50,8 @@ services:
       - $PWD/.env.lumiere
     environment:
       - NGROK_TOKEN
+    ports:
+      - "8040:8040"
 
 volumes:
   wordpress:
