--- a/docker/codeception/Dockerfile
+++ b/docker/codeception/Dockerfile
@@ -42,7 +42,8 @@ RUN mv jq-linux64 /usr/local/bin/jq
 ENV COMPOSER_ALLOW_SUPERUSER=1
 RUN curl -sS https://getcomposer.org/installer | php -- \
         --filename=composer \
-        --install-dir=/usr/local/bin
+        --install-dir=/usr/local/bin \
+        --version=1.10.16
 RUN composer global require --optimize-autoloader \
         "hirak/prestissimo"
 
