--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,14 @@
   "description": "Test",
   "license": "GPL-2.0+",
   "require": {
-    "lucatume/wp-browser": "^2.2"
+    "lucatume/wp-browser": "^3.0",
+    "codeception/module-asserts": "^1.0",
+    "codeception/module-phpbrowser": "^1.0",
+    "codeception/module-webdriver": "^1.0",
+    "codeception/module-db": "^1.0",
+    "codeception/module-filesystem": "^1.0",
+    "codeception/module-cli": "^1.0",
+    "codeception/util-universalframework": "^1.0"
   },
   "autoload":{
     "psr-4":{
