--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,21 @@
   "description": "Test",
   "license": "GPL-2.0+",
   "require": {
-    "lucatume/wp-browser": "^2.2"
+    "php" : "<=7.0",
+    "lucatume/wp-browser": "^2.2.36"
   },
   "autoload":{
     "psr-4":{
       "SkyVerge\\Lumiere\\": "src",
       "Codeception\\": "src/Codeception"
+    }
+  },
+  "config": {
+    "platform": {
+      "php" : "7.0"
+    },
+    "allow-plugins": {
+      "kylekatarnls/update-helper": false
     }
   },
   "bin":["bin/lumiere"]
