--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,15 @@
   "license": "GPL-2.0+",
   "require": {
     "php" : "^7.4",
-    "lucatume/wp-browser": "^3.1"
+    "lucatume/wp-browser": "^3.1",
+    "codeception/module-asserts": "^1.0",
+    "codeception/module-phpbrowser": "^1.0",
+    "codeception/module-webdriver": "^1.0",
+    "codeception/module-db": "^1.0",
+    "codeception/module-filesystem": "^1.0",
+    "codeception/module-rest": "^1.0",
+    "codeception/module-cli": "^1.0",
+    "codeception/util-universalframework": "^1.0"
   },
   "autoload":{
     "psr-4":{
